kubernetes-orchestration/1-create-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment1
spec: 
  selector:
    matchLabels:
      name: my-app1
  template:
    metadata:
      labels:
        name: my-app1
    spec:
      containers:
        - name: hello-world
          image: kabdi384/my-app-image:latest
