kubernetes-orchestration/2-create-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: my-pod1
spec:
  containers:
    - name: hello-world
      image: kabdi384/my-app-image:latest
