kubernetes-orchestration/4-pod-with-volume-service-and-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment2
spec:
  selector:
    matchLabels:
      name: my-app2
  template:
    metadata:
      labels:
        name: my-app2
    spec:
      containers:
        - name: container-mariadb
          image: mariadb:latest
          args:
            - --init-file
            - /shared-files/4-schema.sql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
            - mountPath: /shared-files
              name: root
      volumes:
        - name: db-data
          hostPath:
            path: /data/volume-example
        - name: root
          hostPath:
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: ClusterIP
  selector:
    name: my-app2
  ports:
    - port: 3306
      targetPort: 3306
---
